--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
+    --pattern: 218 11% 65% / 25%;
+
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
 
